<resources>
    <string name="app_name">ANetHack</string>
    <string name="button_esc">ESC</string>
    <string name="play_mod_normal">normal</string>
    <string name="play_mod_discover">discover</string>
    <string name="player_select">Select save data to load</string>
    <string name="player_input">Input you player name</string>
    <string name="player_add">Click to start new game</string>
    <string name="player_name_too_long">Player %s name too long.</string>
    <string name="player_name_exists">Player %s already exists.</string>
    <string name="ext_cmd_select">Please select extended command.</string>
    <string name="message_history">Message history.</string>
    <string name="item_amount_select">Select the amount of %s</string>
    <string name="number_select">Please input the quantity.</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select_all">Select all</string>
    <string name="dialog_clear_all">Clear all</string>
    <string name="pos_key_question">What do you want to do?</string>
    <string name="pos_key_travel">Travel</string>
    <string name="pos_key_run">Run</string>
    <string name="pos_key_look">Look</string>
    <string name="key_dot_status_desc">key dot status image view</string>
    <string name="menu_item_tile_desc">menu tile image</string>
    <string name="run_mode_run">Run</string>
    <string name="run_mode_travel">Travel</string>
    <string name="run_mode_walk">Walk</string>

    <string name="settings_title">Settings</string>
    <string name="activity_settings_title">SettingsActivity</string>
    <string name="activity_option_edit_title">OptionEditActivity</string>
    <string name="option_edit_save">Save</string>
    <string name="option_edit_cancel">Cancel</string>
    <string name="option_edit_title">Option</string>
    <string name="option_menu_save">Option Save</string>
    <string name="option_save_dialog_title">Save option</string>
    <string name="option_save_dialog_msg">Do you want to save the option file?</string>

    <!-- Price identification -->
    <string name="pride_id_title">Price Identification</string>
    <string name="pride_id_charisma_label">Charisma</string>
    <string name="pride_id_price_label">Price</string>
    <string name="pride_id_surcharge_label">Surcharge</string>
    <string name="pride_id_type_label">Item Type</string>
    <string name="pride_id_mode_label">Mode</string>
    <string name="price_id_surcharge_none">None</string>
    <string name="price_id_surcharge_tourist">Tourist below exp 15</string>
    <string name="price_id_surcharge_shirt">Wear a visible shirt</string>
    <string name="price_id_surcharge_cap">Wear a dunce cap</string>
    <string name="price_id_search">Search</string>
    <string name="price_id_mode_sell">Sell</string>
    <string name="price_id_mode_buy">Buy</string>
    <string name="price_id_mode_base">Base</string>
    <!-- 价格段关键词：匹配游戏端文本（{buy 267 sell 67}），本地化时与游戏端保持一致 -->
    <string name="price_quote_buy">buy</string>
    <string name="price_quote_sell">sell</string>
    <string name="price_id_invalid_json">Invalid json format.</string>

    <!-- Preference Log -->
    <string name="pref_log_header">Logs</string>
    <string name="pref_log_dump">Dump log</string>
    <string name="pref_log_dump_summery">The log that records game state at the end of a game.</string>
    <string name="pref_log_dump_max_size">Dump log size</string>
    <string name="pref_log_error">Error log</string>
    <string name="pref_log_error_summery">Android crash log.</string>

    <!-- Preference Sound -->
    <string name="pref_sound_header">Sound</string>
    <string name="pref_sound_user">User sound</string>
    <string name="pref_sound_user_summery">Play your own sound files, see the user sound part in the config file.</string>
    <string name="pref_sound_internal">Internal sound</string>
    <string name="pref_sound_internal_summery">Play internal sound that NetHack provided.</string>

    <!-- Preference Config -->
    <string name="pref_option_header">Config</string>
    <string name="pref_option_edit">Edit config file</string>

    <!-- Preference PriceID -->
    <string name="pref_price_id_header">Price Identification</string>
    <string name="pref_price_id_enable">Enable price identification</string>
    <string name="pref_price_id_enable_desc">Open the price identification dialog when using the Price ID command or tapping a price quote (sell/buy) in menus.</string>

    <!-- Preference Menu -->
    <string name="pref_menu_header">Menu</string>
    <string name="pref_menu_type">Menu type</string>
    <string name="pref_menu_type_dialog">Dialog</string>
    <string name="pref_menu_type_operate">Operation</string>

    <!-- Preference Message -->
    <string name="pref_message_header">Message</string>
    <string name="pref_message_history_size">Size of message history</string>

    <!-- Preference Map -->
    <string name="pref_map_header">Map</string>
    <string name="pref_map_tileset">Tileset</string>
    <string name="pref_map_tile_default">Default</string>
    <string name="pref_map_tile_nevanda">Nevanda</string>
    <string name="pref_map_tile_pixelhack">PixelHack</string>
    <string name="pref_map_tile_ascii">Ascii</string>
    <string name="pref_map_indicator">Show indicator</string>
    <string name="pref_map_last_travel_indicator">Show last travel indicator</string>
    <string name="pref_map_indicator_desc">Show map symbol indicator.</string>
    <string name="pref_map_indicator_symbols">Indicator symbols</string>
    <string name="pref_map_walk_range">Walk range</string>
    <string name="pref_map_walk_range_desc">When the player moves beyond the range(%), the screen will move along with it.</string>
    <string name="pref_map_travel_after_panned">Travel after map panned</string>
    <string name="pref_map_travel_after_panned_desc">Travel when you touch the map, if the map has been translated and player not in walk range.</string>

    <!-- Preference Keyboard -->
    <string name="pref_keyboard_header">Keyboard</string>
    <string name="pref_keyboard_vibrate">Keyboard vibration</string>
    <string name="pref_keyboard_command_panel">Edit command panel</string>
    <string name="pref_keyboard_command_panel_default">Setting SS|Save #quit|Quit PriceID|Price S#engrave#-nL\"Elbereth\":|Elber S20s|20s Keyboard|Abc\n#|Extend d|Drop e|Eat a|Apply :|Look ,|Pick .|Rest</string>

    <!-- Preference Other -->
    <string name="pref_other_header">Other</string>
    <string name="pref_other_lock_view">Lock view</string>
    <string name="pref_other_lock_view_desc">Always put the player in the center of the view.</string>
    <string name="pref_other_immersive_mode">Immersive mode</string>
    <string name="pref_other_immersive_mode_desc">Hide system ui.</string>

    <string name="permission_audio">Audio permission</string>
    <string name="permission_granted">Permission has been granted. </string>
    <string name="permission_denied">The audio permission is blocked. You need to grant it manually in the app settings.</string>
    <string name="permission_denied_hint">NetHack need permission to play user sound.</string>
    <string name="permission_open_settings">Open settings</string>

    <!-- special menu header   -->
    <string name="menu_header_direction">In what direction</string>

</resources>