<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/pref_log_header"
        app:iconSpaceReserved="false">
        <Preference
            app:key="dumpLog"
            app:title="@string/pref_log_dump"
            app:summary="@string/pref_log_dump_summery"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="dumpLogMaxSize"
            app:title="@string/pref_log_dump_max_size"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="10"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="errorLog"
            app:title="@string/pref_log_error"
            app:useSimpleSummaryProvider="false"
            app:summary="@string/pref_log_error_summery"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_map_header"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="tileSet"
            app:title="@string/pref_map_tileset"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="1"
            app:entries="@array/map_tile_array"
            app:entryValues="@array/map_tile_value"/>

        <CheckBoxPreference
            app:key="showIndicator"
            app:title="@string/pref_map_indicator"
            app:iconSpaceReserved="false"
            app:defaultValue="true"
            app:summary="@string/pref_map_indicator_desc"/>

        <CheckBoxPreference
            app:key="showLastTravelIndicator"
            app:title="@string/pref_map_last_travel_indicator"
            app:dependency="showIndicator"
            app:iconSpaceReserved="false"
            app:defaultValue="true"/>

        <EditTextPreference
            app:key="indicatorSymbols"
            app:dependency="showIndicator"
            app:title="@string/pref_map_indicator_symbols"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="&#060;&#062;"
            app:iconSpaceReserved="false"/>


    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_menu_header"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="menuType"
            app:title="@string/pref_menu_type"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="1"
            app:entries="@array/menu_type_array"
            app:entryValues="@array/menu_type_value"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_message_header"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="messageHistorySize"
            app:title="@string/pref_message_history_size"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="500"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_option_header"
        app:iconSpaceReserved="false">

        <Preference
            app:key="optionEdit"
            app:title="@string/pref_option_edit"
            app:useSimpleSummaryProvider="false"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_other_header"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            app:key="lockView"
            app:title="@string/pref_other_lock_view"
            app:iconSpaceReserved="false"
            app:defaultValue="false"
            app:summary="@string/pref_other_lock_view_desc"/>

        <CheckBoxPreference
            app:key="immersiveMode"
            app:title="@string/pref_other_immersive_mode"
            app:iconSpaceReserved="false"
            app:defaultValue="true"
            app:summary="@string/pref_other_immersive_mode_desc"/>
    </PreferenceCategory>


</PreferenceScreen>