<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:breakStrategy="high_quality"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/player_select"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/player_choose_list"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="15dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/player_choose_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/dialog_cancel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/player_choose_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:text="@string/dialog_confirm"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</LinearLayout>