<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/obj_filter_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/obj_surcharge_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_arrow_drop_down">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/obj_surcharge_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pride_id_surcharge_label"
                android:cursorVisible="false"
                android:longClickable="false"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/obj_type_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_arrow_drop_down">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/obj_type_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pride_id_type_label"
                    android:cursorVisible="false"
                    android:longClickable="false"
                    android:clickable="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/obj_id_mod_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_arrow_drop_down">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/obj_id_mod_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/pride_id_mode_label"
                    android:cursorVisible="false"
                    android:longClickable="false"
                    android:clickable="true"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/role_charisma_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:hint="@string/pride_id_charisma_label" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/obj_price_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:hint="@string/pride_id_price_label"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/price_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_id_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/obj_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>